[package]
name = "rutudu"
version = "0.1.0"
authors = ["lordfoom <lordfoom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tui = "0.15.0"
unicode-width = "0.1.8"
termion = "1.5.6"
log = "0.4.14"
log4rs = "1.0.0"
regex="1.5.4"
chrono="0.4"
rusqlite = "0.25.3"
