[package]
name = "rutudu"
version = "1.0.0"
authors = ["lordfoom <lordfoom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.9"
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1.8"
log = "0.4.14"
log4rs = "1.0.0"
regex="1.5.4"
chrono="0.4"
rusqlite = "0.26.3"
num-traits = "0.2.14"
num = "0.4.0"
num-derive = "0.3.3"
clockrusting = { git = "https://github.com/LordFoom/clockrusting", optional = true, branch = 'master'}

[features]
clockrust = ["clockrusting"]
